Bug 1297133 - Bustage fix: Don't ignore return values. r=rkent a=jorgk CLOSED TREE